2000-11-02  Kjartan Maraas  <kmaraas@gnome.org>

	* gnome-hints.desktop: Added "no" comment.
	
Wed Aug 30 16:03:55 2000  George Lebl <jirka@5z.com>

	* gnome-hint-properties.c: fix sensitivities of widgets and
	  minor cosmetic improvements

2000-05-26  Karl Eichwalder  <ke@suse.de>

	* gnome-hint.desktop (Comment): Typo.

2000-05-19  Andreas Hyden  <a.hyden@cyberpoint.se>

	* gnome-hint.desktop, gnome-hint-properties.desktop: Added Swedish translation.

2000-05-14  Karl Eichwalder  <ke@suse.de>

	* gnome-hint.desktop (Comment): Add de.

2000-05-11  Andreas Hyden  <a.hyden@cyberpoint.se>

	* gnome-hint-properties.desktop: Added Swedish translation.

Tue May 09 01:16:32 2000  George Lebl <jirka@5z.com>

	* Makefile.am: correctly add .desktop to EXTRA_DIST

Mon May 08 20:20:54 2000  George Lebl <jirka@5z.com>

	* gnome-hint.c: add options --browse-(hints|motd|fortune) and
	  --session-startup.  This is so that this can be used as a regular
	  application.  Also mark the title font for translation

	* gnome-hint.desktop, Makefile.am: install an icon into the utilities
	  directory.

2000-05-03  Yukihiro Nakai <nakai@gnome.gr.jp>

	* gnome-hint-properties.desktop : Add Japanese translation.

2000-04-29  Dan Mueth <d-mueth@uchicago.edu>

	* gnome-hint.c: Modified default hint

Sun Apr 16 22:07:51 2000  George Lebl <jirka@5z.com>

	* gnome-hint.c: add ensure_style to make it work for other then -1
	  locales.  Patch from KUSANO Takayuki <AE5T-KSN@asahi-net.or.jp>

2000-04-14  Fatih Demir	<kabalak@gmx.net>

	* gnome-hint-properties.desktop : Added [tr] ..

Sun Apr 02 15:04:04 2000  George Lebl <jirka@5z.com>

	* gnome-hint.c: exit_clicked now takes the first parameter to be the
	  widget of the toplevel dialog window.  The "to reenable..." message
	  box has it's parent set to the toplevel dialog window, it is set to
	  be _ONTOP and is raised after being realized.  It is also shown
	  ONLY when the state of RunHints goes from on -> off to avoid bogus